additional endpoint /admin/location + return data for put /admin
