# src/routes/admin.route.js
@@ -8,6 +8,7 @@ router.get('/', JWTAdminMiddleware, AdminController.getAdminInfo)
 router.post('/register', JWTAdminMiddleware, AdminController.createAdmin)
 router.post('/login', AdminController.getAdminJWT)
 router.get('/list', JWTAdminMiddleware, AdminController.getAdminList)
+router.get('/location', JWTAdminMiddleware, AdminController.getMyLocations)
 router.get('/:adminId', JWTAdminMiddleware, AdminController.getAdminInfoById)
 router.put('/:adminId', JWTAdminMiddleware, AdminController.updateAdmin)
 router.delete('/adminId', JWTAdminMiddleware, AdminController.deleteAdmin)
