# swagger.yaml
@@ -231,10 +231,42 @@ paths:
       responses: 
         "200":
           description: "admin updated"
+  /admin/location:
+    get:
+      summary:
+        "get list of my locations"
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description:
+            "list of locaiton"
+          content:
+            application/json:
+              example:
+                {
+                  "success": true,
+                  "data": [
+                    {
+                      "id": 1,
+                      "address": "string",
+                      "city": "string",
+                      "postcode": "string",
+                      "phone": "string",
+                      "mail": "string",
+                      "createdAt": "2025-04-16T08:14:07.202Z",
+                      "updatedAt": "2025-04-16T08:14:07.202Z",
+                      "AdminsLocations": {
+                        "AdminId": 1,
+                        "LocationId": 1
+                      }
+                    }
+                  ]
+                }
   /admin/{adminId}/location:
     get:
       summary:
-        "to get list of locations you need to be admin"
+        "to get list of locations you need to be superadminadmin"
       parameters:
         - in: path
           name: adminId
@@ -631,6 +663,20 @@ paths:
         "200":
           description: 
             "game was updated"
+          content:
+            application/json:
+              example:
+                {
+                  "success": true,
+                  "data": {
+                    "id": 2,
+                    "name": "no name",
+                    "icon": "1744789749739-759170685.gif",
+                    "color": "no color",
+                    "maxPlayers": 0,
+                    "LocationId": 1
+                  }
+                }
 
 
 
